completed initial grid fetch, further fleshed out index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
     <head>
+        <meta charset="utf-8">
         <title>Page Title</title>
     </head>
     <body>
-        ...your page content...
+        <canvas id="my-canvas" width="480" height="320"></canvas>
+        <script src="./src/index.js"></script>
     </body>
 </html>
