--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Page Title</title>
+        <link rel = "stylesheet" type = "text/css" href = "src/stylesheet.css" />
     </head>
     <body>
         <canvas id="my-canvas" width="480" height="320"></canvas>
+        <div id="platform", style="bottom:100px; left:400px;"></div>
         <script src="./src/index.js"></script>
     </body>
 </html>
