--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <canvas id="my-canvas" width="1010" height="800"></canvas>
-        <div id="platform", style="bottom:100px; left:400px;"></div>
+        <!-- <div id="platform", style="bottom:100px; left:400px;"></div> -->
         <script src="./src/index.js"></script>
     </body>
 </html>
