--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Page Title</title>
-        <link rel = "stylesheet" type = "text/css" href = "src/stylesheet.css" />
+        <link rel="stylesheet" href="styles.css"/>
+        <!-- <link rel = "stylesheet" type = "text/html" href = "https://fonts.google.com/specimen/Monoton?preview.text=Break%20Out%20Now&preview.text_type=custom&preview.size=32&sidebar.open=true&selection.family=Monoton#standard-styles" /> -->
+        
     </head>
     <body>
+        <div></div>
         <canvas id="my-canvas" width="1010" height="800"></canvas>
         <div id="platform", style="bottom:100px; left:400px;"></div>
         <script src="./src/index.js"></script>
