fixed missing src from html link tag

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Page Title</title>
-        <link rel="stylesheet" href="styles.css"/>
-        <!-- <link rel = "stylesheet" type = "text/html" href = "https://fonts.google.com/specimen/Monoton?preview.text=Break%20Out%20Now&preview.text_type=custom&preview.size=32&sidebar.open=true&selection.family=Monoton#standard-styles" /> -->
+        <link rel="stylesheet" href="src/stylesheet.css"/>
+        <link rel = "stylesheet" type = "text/html" href = "https://fonts.google.com/specimen/Monoton?preview.text=Break%20Out%20Now&preview.text_type=custom&preview.size=32&sidebar.open=true&selection.family=Monoton#standard-styles" />
         
     </head>
     <body>
