--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <input id="input_value2" type="text" name="username">
             </form>
         </div>
+        <h3 id="user-info"></h3>
         <canvas id="my-canvas" width="1010" height="800"></canvas>
         <!-- <div id="platform", style="bottom:100px; left:400px;"></div> -->
         <script src="./src/index.js"></script>
