checks to see if user is created, creates one or selects one accordingly. created start game button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             </form>
         </div>
         <h3 id="user-info"></h3>
+        <h2 id="show-score-lives"></h2>
+        <button id="start-game">Start Game</button>
         <canvas id="my-canvas" width="1010" height="800"></canvas>
         <!-- <div id="platform", style="bottom:100px; left:400px;"></div> -->
         <script src="./src/index.js"></script>
