able to show top 3 scores for existing user

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </form>
         </div>
         <h3 id="user-info"></h3>
+        <ol id="user-scores"></ol>
         <h2 id="show-score-lives"></h2>
         <button id="start-game">Start Game</button>
         <canvas id="my-canvas" width="1010" height="800"></canvas>
