--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
             <form id="form_id">
             </form>
         </div>
-        <h3 id="user-info"></h3>
-        <div id="scores-container">
-            <ol id="user-scores"></ol>
+        <div class="score-css">
+            <h3 id="user-info" class="current-user"></h3>
+            <div id="scores-container" class="scores-list">
+                <ol id="user-scores"></ol>
+            </div>
+            <div id="start-game"></div>
         </div>
-        <div id="start-game"></div>
-        <!-- <button id="start-game">Start Game</button> -->
-        <h2 id="show-score-lives"></h2>
+            <!-- <button id="start-game">Start Game</button> -->
+        <h2 id="show-score-lives" class="tracker"></h2>  
         <canvas id="my-canvas" width="1010" height="800"></canvas>
+        
         <!-- <div id="platform", style="bottom:100px; left:400px;"></div> -->
         <script src="./src/index.js"></script>
         <script src="src/Fetch.js"></script>
