styling, added custom font

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Page Title</title>
     <link rel="stylesheet" href="src/stylesheet.css" />
-    <link rel="stylesheet" type="text/html"
-        href="https://fonts.google.com/specimen/Monoton?preview.text=Break%20Out%20Now&preview.text_type=custom&preview.size=32&sidebar.open=true&selection.family=Monoton#standard-styles" />
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
