added background music and sounds

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Page Title</title>
     </link>
     <link rel="stylesheet" href="src/stylesheet.css" />
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.1/howler.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
     <link
     rel="stylesheet"
